The blog is now 80% ready for get articles :)

--- a/categories.html
+++ b/categories.html
@@ -1,8 +1,7 @@
 ---
-layout: page
-title: Categories
-header: Posts By Category
-group: navigation
+layout: default
+title: Catégories
+header: Articles par catégorie
 ---
 {% include JB/setup %}
 
