--- a/references.html
+++ b/references.html
@@ -3,14 +3,14 @@ layout: empty
 title: Références
 group: navigation
 competences:
-- PHP|5
-- SQL|5
-- Javascript|5
-- XML|5
-- HTML|4
-- CSS|3
-- Script système|3
-- Liquid|2
+- [PHP,5]
+- [SQL,5]
+- [Javascript,5]
+- [XML,5]
+- [HTML,4]
+- [CSS,3]
+- [Script système,3]
+- [Liquid,2]
 ---
 
 <script type="text/javascript" charset="utf-8">
@@ -35,8 +35,8 @@ var techno = function (nb)
 
 {% for techno in page.competences %}
 <li>
-    <span>{{ techno | split:'|' | first }}</span>
-    <script type="text/javascript" charset="utf-8">techno({{ techno | split:'|' | last }});</script>
+    <span>{{ techno[0] }}</span>
+    <script type="text/javascript" charset="utf-8">techno({{ techno[1] }});</script>
 </li>
 {% endfor %}
     </ul>
