Fix "competences" for github ? :s

--- a/references.html
+++ b/references.html
@@ -2,15 +2,7 @@
 layout: empty
 title: Références
 group: navigation
-competences:
-- [PHP,5]
-- [SQL,5]
-- [Javascript,5]
-- [XML,5]
-- [HTML,4]
-- [CSS,3]
-- [Script système,3]
-- [Liquid,2]
+competences: [[PHP,5], [SQL,5], [Javascript,5], [XML,5], [HTML,4], [CSS,3], [Script système,3], [Liquid,2]]
 ---
 
 <script type="text/javascript" charset="utf-8">
