remove alt for stars in references

--- a/references.html
+++ b/references.html
@@ -11,9 +11,9 @@ var techno = function (nb)
 {
     for (var i = 1; i <= 5; i++) {
         if (i <= nb) {
-            document.write('<img src="/img/etoile_pleine.png" alt="X" />');
+            document.write('<img src="/img/etoile_pleine.png" alt="" />');
         } else {
-            document.write('<img src="/img/etoile_vide.png" alt="0" />');
+            document.write('<img src="/img/etoile_vide.png" alt="" />');
         }
     }
 }
