erf... bad ] char

--- a/references.html
+++ b/references.html
@@ -10,7 +10,7 @@ competences:
 - {label: HTML, value: 4}
 - {label: CSS, value: 3}
 - {label: Script système, value: 3}
-- {label: Liquid, value: 2}]
+- {label: Liquid, value: 2}
 ---
 
 <script type="text/javascript" charset="utf-8">
