Credits + Legals (more or less)

--- a/legals.html
+++ b/legals.html
@@ -5,4 +5,26 @@ group: footer_links
 searchable: false
 ---
 
-<p>Coming soon</p>
+<h2>C'est qui ce mec ?</h2>
+
+<p>Je suis Jacques Bodin-Hullin et c'est mon blog.</p>
+
+<p>Pour me contacter c'est tout en bas de chaque page.</p>
+<p>Vous pouvez obtenir plus d'informations en scannant mon QRCode à droite du formulaire de contact.</p>
+
+<h2>L'hébergement</h2>
+
+<ul>
+    <li>Nom de l'hébergeur : GitHub</li>
+    <li>Raison sociale : GitHub</li>
+    <li>Adresse :
+    <ul>
+        <li>GitHub, Inc.</li>
+        <li>589 Howard St.</li>
+        <li>Floor 4</li>
+        <li>San Francisco, California 94105</li>
+        <li>United States</li>
+    </ul>
+    </li>
+    <li>Numéro de téléphone : +1.7606720832</li>
+</ul>
