--- a/credits.html
+++ b/credits.html
@@ -5,5 +5,13 @@ group: footer_links
 searchable: false
 ---
 
-<p>Coming soon</p>
+<h1>Crédits / Remerciements</h1>
 
+<p>Cette page me tient à coeur car sans ces personnes ce blog n'existerait pas aujourd'hui.</p>
+
+<ul>
+    <li>Le logo et le design, c'est Laurent Demontiers. Merci !</li>
+    <li>Ma "formation Magento" c'est CaPiT sur le chan IRC #magento-fr (freenode). Ce chan c'est aussi Kv`, Douilspee, choomz, Flopy et tous les autres, les nouveaux et les plus anciens. Ils animent mes journées avec leurs questions :) (et les trolls).</li>
+    <li>Le moteur du blog c'est Jekyll, merci aux créateurs.</li>
+    <li>L'hébergeur c'est Github :)</li>
+</ul>
