Add width and height attributes to images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ searchable: false
 {% capture sidebar %}
 <h2>A propos</h2>
 <div>
-    <img src="/img/visage_edito.png" alt="" />
+    <img src="/img/visage_edito.png" alt="" width="277" height="88" />
     <p>Bienvenue sur mon blog !</p>
     <p>J'espère que vous y trouverez l'information que vous cherchez.</p>
     <p>Je suis Jacques Bodin-Hullin, développeur PHP confirmé, <em>amateur</em> sur Magento à mes heures perdues...</p>
@@ -41,7 +41,7 @@ searchable: false
                 <h3>{{ item.title }}</h3>
                 <p class="subitem">
                 <a href="{{ item.url }}">
-                <img src="/img/{{ item.slider.image }}" alt="{{ item.title }}" />
+                <img src="/img/{{ item.slider.image }}" alt="{{ item.title }}" height="90" width="260" />
                 </a>
                 <a href="{{ item.url }}" class="detail">Voir le détail &gt;&gt;</a>
                 </p>
