References : Python level 1 :D

--- a/references.html
+++ b/references.html
@@ -11,6 +11,7 @@ competences:
 - {label: CSS, value: 3}
 - {label: Script système, value: 3}
 - {label: Liquid, value: 2}
+- {label: Python, value: 1}
 ---
 
 <script type="text/javascript" charset="utf-8">
