Updated intro + titles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: empty
-title: Jacques Bodin-Hullin - Magento developer
+title: Des articles sur Magento et plein d'autres choses !
 searchable: false
 ---
 
@@ -10,9 +10,10 @@ searchable: false
 <div>
     <img src="/img/visage_edito.png" alt="" width="277" height="88" />
     <p>Bienvenue sur mon blog !</p>
-    <p>J'espère que vous y trouverez l'information que vous cherchez.</p>
-    <p>Je suis Jacques Bodin-Hullin, développeur PHP confirmé, <em>amateur</em> sur Magento à mes heures perdues...</p>
+    <p>Je suis Jacques Bodin-Hullin, développeur PHP confirmé, certifié sur Magento.</p>
     <p>Ce blog est dédié au développement, PHP essentiellement, Javascript un peu, et tout le reste, évidemment !</p>
+    <p>N'hésitez pas à aller faire un tour <a href="https://github.com/jacquesbh">sur mon github</a> afin de suivre mes projets et à poster vos remarques sur les articles que vous trouvez ici, c'est toujours constructif !</p>
+    <p>J'espère que vous trouverez ici l'information que vous cherchez.</p>
 </div>
 
 <hr />
