--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ searchable: false
                 <h3>{{ item.title }}</h3>
                 <p class="subitem">
                 <a href="{{ item.url }}">
-                <img src="/img/{{ item.slider.image }}" alt="{{ item.title }}" height="90" width="260" />
+                <img src="/images/{{ item.slider.image }}" alt="{{ item.title }}" height="90" width="260" />
                 </a>
                 <a href="{{ item.url }}" class="detail">Voir le détail &gt;&gt;</a>
                 </p>
