--- a/references.html
+++ b/references.html
@@ -56,7 +56,7 @@ var techno = function (nb)
             <h2>{{ ref.title }}</h2>
             <div class="subitem">
                 <a href="{{ ref.url }}">
-                    <img src="/img/{{ ref.page.image }}" alt="{{ ref.title }}" />
+                    <img src="/images/{{ ref.page.image }}" alt="{{ ref.title }}" />
                 </a>
                 <ul>
                     {% for detail in ref.details limit:4 %}
