--- a/404.html
+++ b/404.html
@@ -1,9 +1,12 @@
 ---
 layout: empty
-title: Désolé mais cette page n'existe pas =(
+title: "Oops. You're lost."
 searchable: false
+body_class: notfound
 ---
 
-<p>
-:(
-</p>
+<div id="lost">
+    <strong class="msg">You're here. Not bad.</strong>
+</div>
+
+
