--- a/a-propos.html
+++ b/a-propos.html
@@ -204,25 +204,31 @@
     <div id="contentWrap">
         <h1>Qui se cache derrière ce blog ?</h1>
 
-<p>Les articles de ce blog sont rédigés par Jacques Bodin-Hullin.</p>
+<p>Les articles de ce blog sont rédigés par Jacques Bodin-Hullin, c'est-à-dire moi-même.</p>
 
-<p>Jacques est un développeur PHP confirmé qui a su apprendre dès son plus jeune âge les techniques du web.</p>
+<p>Je suis un développeur PHP confirmé qui a su apprendre dès son plus jeune âge les techniques du web.</p>
 
-<p>Fort de son expérience, aussi bien personnelle avec son activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a> ou encore <a href="http://colorz.fr/">Colorz</a>, il est maintenant Lead Développeur chez <a href="http://internim.com/">Internim</a> depuis juillet 2012.</p>
+<p>Fort de mon expérience, aussi bien personnelle avec mon activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a>, <a href="http://colorz.fr/">Colorz</a> ou encore <a href="http://internim.com/">Internim</a>, je suis maintenant Lead Développeur chez <a href="http://capkod.com/">Capkod</a> (groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>, 11M de CA) depuis mars 2013.</p>
 
-<p>A l'origine simple amateur en PHP, il fini par trouver une réelle passion en développement web. En 2008 il décide d'obtenir un Dipôme Universitaire et Technologique en Informatique à l'IUT de la ville d'Orsay, en Essonne.</p>
+<p>A l'origine simple amateur en PHP, je fini par trouver une réelle passion en développement web. En 2008 je décide d'obtenir un Dipôme Universitaire et Technologique en Informatique à l'IUT de la ville d'Orsay, en Essonne.</p>
 
-<p>A la fin de son DUT il est embauché chez <a href="http://atafotostudio.com/">ATAFOTO.studio</a> où il remettra sur pied le site <a href="http://www.kinderchocolat.fr/">Kinder Chocolat</a> basé entièrement sur le <em>Zend Framework</em>. Il aura l'occasion de travailler pour des clients tels que <em>Sofitel</em> pour l'agence social media <a href="http://www.roxane-company.com/">Roxane</a>, <em>Pyrex</em> et <em>Ferrero</em>.</p>
+<p>A la fin de mon DUT je suis embauché chez <a href="http://atafotostudio.com/">ATAFOTO.studio</a> où je remet sur pied le site <a href="http://www.kinderchocolat.fr/">Kinder Chocolat</a> basé entièrement sur le <em>Zend Framework</em>. j'aurai l'occasion de travailler pour des clients tels que <em>Sofitel</em> pour l'agence social media <a href="http://www.roxane-company.com/">Roxane</a>, <em>Pyrex</em> et <em>Ferrero</em>.</p>
 
-<p>C'est en décembre 2010, quand il arrive chez <a href="http://colorz.fr/">Colorz</a> en tant que développeur PHP confirmé, qu'il se dirige indirectement vers la solution e-commerce Magento.</p>
+<p>C'est en décembre 2010, quand j'arrive chez <a href="http://colorz.fr/">Colorz</a> en tant que développeur PHP confirmé, que je me dirige indirectement vers la solution e-commerce Magento.</p>
 
-<p>Il met les mains dedans grâce à <a href="http://www.emoi-emoi.com/">Emoi-Emoi</a>, <a href="http://www.jimmyfairly.com/fr/">Jimmy Fairly</a>, <a href="http://www.megalithes-montres.com/">Megalithes Montres</a>, <a href="http://www.thebeautyst.com/">The Beautyst</a>, Vinobest ou encore <a href="http://www.soubis.com/">Soubis</a>.</p>
+<p>Je mets les mains dedans grâce à <a href="http://www.emoi-emoi.com/">Emoi-Emoi</a>, <a href="http://www.jimmyfairly.com/fr/">Jimmy Fairly</a>, <a href="http://www.megalithes-montres.com/">Megalithes Montres</a>, <a href="http://www.thebeautyst.com/">The Beautyst</a>, Vinobest ou encore <a href="http://www.soubis.com/">Soubis</a>.</p>
 
-<p>L'envie de mouvement l'attire ensuite vers la startup <a href="http://joliebox.com/">JolieBox</a> en novembre 2011 où il interviendra sur la mise en place de la plateforme e-commerce basée sur Magento pour les sites anglais et espagnol. Avant de continuer chez <a href="http://internim.com/">Internim</a>, Jacques réalisera une migration des deux sites de la version <em>community 1.6.1.0</em> vers la version <em>enterprise 1.12.0.2</em>.</p>
+<p>L'envie de mouvement m'attire ensuite vers la startup <a href="http://joliebox.com/">JolieBox</a> en novembre 2011 où j'interviendrais sur la mise en place de la plateforme e-commerce basée sur Magento pour les sites anglais et espagnol. Avant de continuer chez <a href="http://internim.com/">Internim</a>, je réalise une migration des deux sites de la version <em>community 1.6.1.0</em> vers la version <em>enterprise 1.12.0.2</em>.</p>
 
-<p>Jacques est <a href="http://www.magentocommerce.com/certification/directory/dev/69536/">certifié <em>développeur</em> et <em>développeur plus</em> sur Magento</a> depuis respectivement novembre et décembre 2012.</p>
+<p>Je suis <a href="http://www.magentocommerce.com/certification/directory/dev/69536/">certifié <em>développeur</em> et <em>développeur plus</em> sur Magento</a> depuis respectivement novembre et décembre 2012.</p>
 
-<p>Par ailleurs vous pourrez trouver plusieurs projets opensource, parfois abandonnés faute de temps, sur <a href="https://github.com/jacquesbh/">son github</a>. Entre autre <a href="http://jacques.sh/jbhslider/">le <em>slider jQuery « JbhSlider »</em></a>, un slider réalisé pour répondre aux problématiques des développeurs et intégrateurs.</p>
+<p>En mars 2013 je quitte la société Internim pour intégrer la société <a href="http://capkod.com/">Capkod</a>, une nouvelle filiale du groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>.</p>
+
+<p>Par ailleurs vous pourrez trouver plusieurs projets opensource, parfois abandonnés faute de temps, sur <a href="https://github.com/jacquesbh/">mon github</a>. Entre autre <a href="http://jacques.sh/jbhslider/">le <em>slider jQuery « JbhSlider »</em></a>, un slider réalisé pour répondre aux problématiques des développeurs et intégrateurs.<br/>
+Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil simple mais puissant, permettant de développer rapidement et proprement sur Magento.</p>
+
+<p>En mai 2013 j'obtiens la dernière certification Magento et deviens certifié <em>Front End Developer</em> sur Magento.<br/>
+On peut considérer que je suis expert Magento, même si je n'aime pas ce terme car nous avons toujours quelque chose à apprendre.</p>
 
     </div>
 
