Locating the required gigapixels to render...

--- a/a-propos.html
+++ b/a-propos.html
@@ -208,7 +208,7 @@
 
 <p>Je suis un développeur PHP confirmé qui a su apprendre dès son plus jeune âge les techniques du web.</p>
 
-<p>Fort de mon expérience, aussi bien personnelle avec mon activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a>, <a href="http://colorz.fr/">Colorz</a> ou encore <a href="http://internim.com/">Internim</a>, je suis maintenant Lead Développeur chez <a href="http://capkod.com/">Capkod</a> (groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>, 11M de CA) depuis mars 2013.</p>
+<p>Fort de mon expérience, aussi bien personnelle avec mon activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a>, <a href="http://colorz.fr/">Colorz</a> ou encore Internim, je suis maintenant Lead Développeur chez <a href="http://capkod.com/">Capkod</a> (groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>, 11M de CA) depuis mars 2013.</p>
 
 <p>A l'origine simple amateur en PHP, je fini par trouver une réelle passion en développement web. En 2008 je décide d'obtenir un Dipôme Universitaire et Technologique en Informatique à l'IUT de la ville d'Orsay, en Essonne.</p>
 
@@ -218,7 +218,7 @@
 
 <p>Je mets les mains dedans grâce à <a href="http://www.emoi-emoi.com/">Emoi-Emoi</a>, <a href="http://www.jimmyfairly.com/fr/">Jimmy Fairly</a>, <a href="http://www.megalithes-montres.com/">Megalithes Montres</a>, <a href="http://www.thebeautyst.com/">The Beautyst</a>, Vinobest ou encore <a href="http://www.soubis.com/">Soubis</a>.</p>
 
-<p>L'envie de mouvement m'attire ensuite vers la startup <a href="http://joliebox.com/">JolieBox</a> en novembre 2011 où j'interviendrais sur la mise en place de la plateforme e-commerce basée sur Magento pour les sites anglais et espagnol. Avant de continuer chez <a href="http://internim.com/">Internim</a>, je réalise une migration des deux sites de la version <em>community 1.6.1.0</em> vers la version <em>enterprise 1.12.0.2</em>.</p>
+<p>L'envie de mouvement m'attire ensuite vers la startup <a href="http://joliebox.com/">JolieBox</a> en novembre 2011 où j'interviendrais sur la mise en place de la plateforme e-commerce basée sur Magento pour les sites anglais et espagnol. Avant de continuer chez Internim, je réalise une migration des deux sites de la version <em>community 1.6.1.0</em> vers la version <em>enterprise 1.12.0.2</em>.</p>
 
 <p>Je suis <a href="http://www.magentocommerce.com/certification/directory/dev/69536/">certifié <em>développeur</em> et <em>développeur plus</em> sur Magento</a> depuis respectivement novembre et décembre 2012.</p>
 
