--- a/a-propos.html
+++ b/a-propos.html
@@ -208,7 +208,7 @@
 
 <p>Je suis un développeur PHP confirmé qui a su apprendre dès son plus jeune âge les techniques du web.</p>
 
-<p>Fort de mon expérience, aussi bien personnelle avec mon activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a>, <a href="http://colorz.fr/">Colorz</a> ou encore Internim, je suis maintenant Lead Développeur chez <a href="http://capkod.com/">Capkod</a> (groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>, 11M de CA) depuis mars 2013.</p>
+<p>Fort de mon expérience, aussi bien personnelle avec mon activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a>, <a href="http://colorz.fr/">Colorz</a> ou encore Internim puis <a href="http://capkod.com/">Capkod</a> (groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>, 11M de CA) je suis maintenant aux commandes d'une agence web spécialisée Magento : <a href="http://monsieurbiz.com">Monsieur Biz</a>.</p>
 
 <p>A l'origine simple amateur en PHP, je fini par trouver une réelle passion en développement web. En 2008 je décide d'obtenir un Dipôme Universitaire et Technologique en Informatique à l'IUT de la ville d'Orsay, en Essonne.</p>
 
@@ -220,15 +220,21 @@
 
 <p>L'envie de mouvement m'attire ensuite vers la startup <a href="http://joliebox.com/">JolieBox</a> en novembre 2011 où j'interviendrais sur la mise en place de la plateforme e-commerce basée sur Magento pour les sites anglais et espagnol. Avant de continuer chez Internim, je réalise une migration des deux sites de la version <em>community 1.6.1.0</em> vers la version <em>enterprise 1.12.0.2</em>.</p>
 
+<p>J'ai l'occasion de travailler sur de gros projets Magento chez Internim et d'apprendre un peu plus le rôle de Lead Développeur.</p>
+
 <p>Je suis <a href="http://www.magentocommerce.com/certification/directory/dev/69536/">certifié <em>développeur</em> et <em>développeur plus</em> sur Magento</a> depuis respectivement novembre et décembre 2012.</p>
 
 <p>En mars 2013 je quitte la société Internim pour intégrer la société <a href="http://capkod.com/">Capkod</a>, une nouvelle filiale du groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>.</p>
 
+<p>En mai 2013 j'obtiens la dernière certification Magento et deviens certifié <em>Front End Developer</em> sur Magento.<br/>
+On peut considérer que je suis expert Magento, même si je n'aime pas ce terme car nous avons toujours quelque chose à apprendre.</p>
+
+<p>C'est en juillet 2013 que je décide finalement de monter mon agence dédiée à la solution Magento : <a href="http://monsieurbiz.com">Monsieur Biz</a>. N'hésitez pas à aller faire un tour sur le site ou à me contacter si vous souhaitez de plus amples informations.</p>
+
 <p>Par ailleurs vous pourrez trouver plusieurs projets opensource, parfois abandonnés faute de temps, sur <a href="https://github.com/jacquesbh/">mon github</a>. Entre autre <a href="http://jacques.sh/jbhslider/">le <em>slider jQuery « JbhSlider »</em></a>, un slider réalisé pour répondre aux problématiques des développeurs et intégrateurs.<br/>
 Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil simple mais puissant, permettant de développer rapidement et proprement sur Magento.</p>
 
-<p>En mai 2013 j'obtiens la dernière certification Magento et deviens certifié <em>Front End Developer</em> sur Magento.<br/>
-On peut considérer que je suis expert Magento, même si je n'aime pas ce terme car nous avons toujours quelque chose à apprendre.</p>
+<p>Dans l'optique Open Source vous trouverez aussi quelques modules et autres outils dédiés aux développeurs sur le <a href="https://github.com/monsieurbiz/">github de l'agence Monsieur Biz</a>.</p>
 
     </div>
 
