--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -990,7 +989,7 @@ Pour faire simple et sans rentrer dans des histoires de cache (car oui le block 
 
     <script type="text/javascript" src="/js/jquery/cookies.js"></script>
     <div id="popin" class="monsieurbiz-popin" style="display: none;">
-        <img src="/img/monsieurbiz.png" alt="" height="250" />
+        <img src="/img/monsieurbiz.png" alt="" height="250" style="height: 250px;" />
         <h2><span class="lines">Un projet, Une agence</span></h2>
         <div class="action">
             <p>
