Apparently works-for-me is a crappy excuse.

--- a/a-propos.html
+++ b/a-propos.html
@@ -20,7 +20,7 @@
   -->
     <link rel="alternate" type="application/rss+xml" title="Jacques Bodin-Hullin - Latest Posts" href="/atom.xml" >
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" ></script>
+    <script type="text/javascript" src="/js/jquery-1.10.2.min.js" ></script>
     <script type="text/javascript" src="/js/fancybox/jquery.fancybox.pack.js" ></script>
     <script type="text/javascript" src="/js/event.js" ></script>
     <script type="text/javascript" src="/js/functions.js" ></script>
@@ -40,9 +40,9 @@
             <a href="http://jacques.sh"></a>
 
             <div id="magento_certified">
-                <a href="http://www.magentocommerce.com/certification/directory/dev/69536/" class="developer" target="_blank"></a>
-                <a href="http://www.magentocommerce.com/certification/directory/dev/69536/" class="developer-plus" target="_blank"></a>
-                <a href="http://www.magentocommerce.com/certification/directory/dev/69536/" class="frontend-developer" target="_blank"></a>
+                <a href="http://www.magentocommerce.com/certification/directory/dev/69536/" title="Jacques Bodin-Hullin, développeur certifié Magento Developer" class="developer" target="_blank"></a>
+                <a href="http://www.magentocommerce.com/certification/directory/dev/69536/" title="L'Agence Monsieur Biz est certifiée Magento Developer Plus" class="developer-plus" target="_blank"></a>
+                <a href="http://www.magentocommerce.com/certification/directory/dev/69536/" title="Jacques Bodin-Hullin est développeur certifié Magento Front End Developer" class="frontend-developer" target="_blank"></a>
             </div>
 
         </div>
@@ -186,6 +186,15 @@
                 </form>
             </li>
         </ul>
+
+        <div class="mbiz">
+            <p>
+                <a href="http://monsieurbiz.com" title="Découvrez l'agence Monsieur Biz, spécialiste Magento">
+                    <img src="/img/monsieurbiz_bg.png" title="L'Agence Monsieur Biz" />
+                    <span>Vous cherchez une agence à taille humaine spécialisée sur la solution e-commerce Magento ? L'agence Monsieur Biz est faite pour vous.</span>
+                </a>
+            </p>
+        </div>
     </div>
 
     <div id="globalWrap">
@@ -194,7 +203,7 @@
 
 <div id="sideWrap">
 
-    <div>
+    <div class="me">
         <img src="/images/me.jpg" alt="" width="277" height="346" />
     </div>
 
@@ -204,37 +213,38 @@
     <div id="contentWrap">
         <h1>Qui se cache derrière ce blog ?</h1>
 
-<p>Les articles de ce blog sont rédigés par Jacques Bodin-Hullin, c'est-à-dire moi-même.</p>
+<p>Les articles de ce blog sont rédigés par <a href="http://jacques.sh/">Jacques Bodin-Hullin</a>, c'est-à-dire moi-même.</p>
 
-<p>Je suis un développeur PHP confirmé qui a su apprendre dès son plus jeune âge les techniques du web.</p>
+<p>Je suis un <a href="http://jacques.sh/">développeur PHP confirmé</a> qui a su apprendre dès son plus jeune âge les techniques du web.</p>
 
-<p>Fort de mon expérience, aussi bien personnelle avec mon activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a>, <a href="http://colorz.fr/">Colorz</a> ou encore Internim puis <a href="http://capkod.com/">Capkod</a> (groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>, 11M de CA) je suis maintenant aux commandes d'une agence web spécialisée Magento : <a href="http://monsieurbiz.com">Monsieur Biz</a>.</p>
+<p>Fort de mon expérience, aussi bien personnelle avec mon activité de freelance de 2009 à 2011 que dans des agences telles que <a href="http://atafotostudio.com/">ATAFOTO.studio</a>, <a href="http://colorz.fr/">Colorz</a> ou encore Internim puis <a href="http://capkod.com/">Capkod</a> (groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>, 11M de CA) je suis maintenant aux commandes d'une <a href="http://monsieurbiz.com/">agence web spécialisée Magento</a> : <a href="http://monsieurbiz.com/">Monsieur Biz</a>.</p>
 
 <p>A l'origine simple amateur en PHP, je fini par trouver une réelle passion en développement web. En 2008 je décide d'obtenir un Dipôme Universitaire et Technologique en Informatique à l'IUT de la ville d'Orsay, en Essonne.</p>
 
-<p>A la fin de mon DUT je suis embauché chez <a href="http://atafotostudio.com/">ATAFOTO.studio</a> où je remet sur pied le site <a href="http://www.kinderchocolat.fr/">Kinder Chocolat</a> basé entièrement sur le <em>Zend Framework</em>. j'aurai l'occasion de travailler pour des clients tels que <em>Sofitel</em> pour l'agence social media <a href="http://www.roxane-company.com/">Roxane</a>, <em>Pyrex</em> et <em>Ferrero</em>.</p>
+<p>A la fin de mon DUT je suis embauché chez <a href="http://atafotostudio.com/">ATAFOTO.studio</a> où je remet sur pied le site <a href="http://www.kinderchocolat.fr/">Kinder Chocolat</a> basé entièrement sur le <em>Zend Framework</em>. J'aurai l'occasion de travailler pour des clients tels que <em>Sofitel</em> pour l'agence social media <a href="http://www.roxane-company.com/">Roxane</a>, <em>Pyrex</em> et <em>Ferrero</em>.</p>
 
-<p>C'est en décembre 2010, quand j'arrive chez <a href="http://colorz.fr/">Colorz</a> en tant que développeur PHP confirmé, que je me dirige indirectement vers la solution e-commerce Magento.</p>
+<p>C'est en décembre 2010, quand j'arrive chez <a href="http://colorz.fr/">Colorz</a> en tant que <a href="http://jacques.sh/">développeur PHP confirmé</a>, que je me dirige indirectement vers la <a href="http://monsieurbiz.com/">solution e-commerce Magento</a>.</p>
 
 <p>Je mets les mains dedans grâce à <a href="http://www.emoi-emoi.com/">Emoi-Emoi</a>, <a href="http://www.jimmyfairly.com/fr/">Jimmy Fairly</a>, <a href="http://www.megalithes-montres.com/">Megalithes Montres</a>, <a href="http://www.thebeautyst.com/">The Beautyst</a>, Vinobest ou encore <a href="http://www.soubis.com/">Soubis</a>.</p>
 
-<p>L'envie de mouvement m'attire ensuite vers la startup <a href="http://joliebox.com/">JolieBox</a> en novembre 2011 où j'interviendrais sur la mise en place de la plateforme e-commerce basée sur Magento pour les sites anglais et espagnol. Avant de continuer chez Internim, je réalise une migration des deux sites de la version <em>community 1.6.1.0</em> vers la version <em>enterprise 1.12.0.2</em>.</p>
+<p>L'envie de mouvement m'attire ensuite vers la startup <a href="http://joliebox.com/">JolieBox</a> en novembre 2011 où j'interviendrais sur la mise en place de la <a href="http://monsieurbiz.com/">plateforme e-commerce basée sur Magento</a> pour les sites anglais et espagnol. Avant de continuer chez Internim, je réalise une migration des deux sites de la version <em>community 1.6.1.0</em> vers la version <em>enterprise 1.12.0.2</em>.</p>
 
-<p>J'ai l'occasion de travailler sur de gros projets Magento chez Internim et d'apprendre un peu plus le rôle de Lead Développeur.</p>
+<p>J'ai l'occasion de travailler sur de gros projets Magento chez Internim tels que <a href="http://www.warnerbros.fr/">Warner Bros France</a> ou encore <a href="http://www.groupemoniteur.fr/">Groupe Moniteur</a> et d'apprendre un peu plus le rôle de <a href="http://monsieurbiz.com/">Lead Développeur</a>.</p>
 
 <p>Je suis <a href="http://www.magentocommerce.com/certification/directory/dev/69536/">certifié <em>développeur</em> et <em>développeur plus</em> sur Magento</a> depuis respectivement novembre et décembre 2012.</p>
 
 <p>En mars 2013 je quitte la société Internim pour intégrer la société <a href="http://capkod.com/">Capkod</a>, une nouvelle filiale du groupe <a href="http://www.inovenaltenor.com/">InovenAltenor</a>.</p>
 
-<p>En mai 2013 j'obtiens la dernière certification Magento et deviens certifié <em>Front End Developer</em> sur Magento.<br/>
-On peut considérer que je suis expert Magento, même si je n'aime pas ce terme car nous avons toujours quelque chose à apprendre.</p>
+<p>En mai 2013 j'obtiens la <a href="http://www.magentocommerce.com/certification/directory/dev/69536/">dernière certification Magento et deviens certifié <em>Front End Developer</em> sur Magento</a>.<br/>
+On peut considérer que je suis <a href="http://monsieurbiz.com/">expert Magento</a>, même si je n'aime pas ce terme car nous avons toujours quelque chose à apprendre.</p>
 
-<p>C'est en juillet 2013 que je décide finalement de monter mon agence dédiée à la solution Magento : <a href="http://monsieurbiz.com">Monsieur Biz</a>. N'hésitez pas à aller faire un tour sur le site ou à me contacter si vous souhaitez de plus amples informations.</p>
+<p>C'est en juillet 2013 que je décide finalement de monter mon <a href="http://monsieurbiz.com/">agence dédiée à la solution Magento</a> : <a href="http://monsieurbiz.com/">Monsieur Biz</a>.<br/>
+N'hésitez pas à aller faire un tour sur le <a href="http://monsieurbiz.com/">site de l'agence dédiée à la plateforme e-commerce Magento</a> ou à me contacter si vous souhaitez de plus amples informations.</p>
 
-<p>Par ailleurs vous pourrez trouver plusieurs projets opensource, parfois abandonnés faute de temps, sur <a href="https://github.com/jacquesbh/">mon github</a>. Entre autre <a href="http://jacques.sh/jbhslider/">le <em>slider jQuery « JbhSlider »</em></a>, un slider réalisé pour répondre aux problématiques des développeurs et intégrateurs.<br/>
-Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil simple mais puissant, permettant de développer rapidement et proprement sur Magento.</p>
+<p>Par ailleurs vous pourrez trouver plusieurs <a href="https://github.com/jacquesbh/">projets opensource</a>, parfois abandonnés faute de temps, sur <a href="https://github.com/jacquesbh/">mon github</a>. Entre autre <a href="http://jacques.sh/jbhslider/">le slider jQuery « JbhSlider »</a>, un <a href="http://jacques.sh/jbhslider/">slider réalisé pour répondre aux problématiques des développeurs et intégrateurs</a>.<br/>
+Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil simple mais puissant, permettant de <a href="https://github.com/jacquesbh/Installer/">développer rapidement et proprement sur Magento</a>.</p>
 
-<p>Dans l'optique Open Source vous trouverez aussi quelques modules et autres outils dédiés aux développeurs sur le <a href="https://github.com/monsieurbiz/">github de l'agence Monsieur Biz</a>.</p>
+<p>Dans l'optique Open Source vous trouverez aussi quelques <a href="https://github.com/monsieurbiz/">modules et autres outils dédiés aux développeurs Magento</a> sur le <a href="https://github.com/monsieurbiz/">github de l'agence Monsieur Biz</a>.</p>
 
     </div>
 
@@ -275,7 +285,7 @@ Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil
                 <a href="https://twitter.com/jacquesbh" class="twitter-follow-button" data-show-count="false">Follow @jacquesbh</a>
             </div>
             
-            <a href="/recipes">Recettes</a>
+            <a href="http://monsieurbiz.com">Monsieur Biz, une agence spécialisée Magento</a>
             | 
 
     
@@ -399,23 +409,31 @@ Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil
 
 </div>
 
+<script type="text/javascript" src="/js/jquery/cookies.js"></script>
+    <div id="popin" class="monsieurbiz-popin" style="display: none;">
+        <img src="/img/monsieurbiz.png" alt="" height="250" style="height: 250px;" />
+        <h2><span class="lines">Un projet, Une agence</span></h2>
+        <div class="action">
+            <p>
+                Monsieur Biz, une agence spécialisée Magento pour votre projet.
+            </p>
+            <a href="http://monsieurbiz.com">
+                <div class="button1">C'est par ici que ça se passe !</div>
+            </a>
+        </div>
+    </div>
 
-
-
-  <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-27192340-2']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-
-
-
+    <script type="text/javascript">
+        (function ($) {
+            $(document).ready(function () {
+                var cookieId = 'monsieurbizPopinDisplayed';
+                if ($.cookie(cookieId) == null) {
+                    $.fancybox.open('#popin');
+                    $.cookie(cookieId, 'true');
+                }
+            });
+         })(jQuery);
+    </script>
 
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
