--- a/page3/index.html
+++ b/page3/index.html
@@ -1713,7 +1713,7 @@ C'est essentiellement à cause de ces <code>reset</code> que je force le commit 
                 <a href="https://twitter.com/jacquesbh" class="twitter-follow-button" data-show-count="false">Follow @jacquesbh</a>
             </div>
             
-            <a href="http://monsieurbiz.com">Monsieur Biz, une agence spécialisée Magento</a>
+            <a href="http://monsieurbiz.com" title="Découvrez Monsieur Biz, une agence spécialisée sur Magento, solution e-commerce">Agence Magento</a>
             | 
 
     
@@ -1831,7 +1831,7 @@ C'est essentiellement à cause de ces <code>reset</code> que je force le commit 
             | <a href="/atom.xml">RSS</a>
             | <a href="#" id="toplink">Haut de page</a>
             <br />
-            &copy; Jacques Bodin-Hullin 2012
+            <span class="copy">&copy; Jacques Bodin-Hullin - 2013</span>
         </div>
     </div>
 
