--- a/a-propos.html
+++ b/a-propos.html
@@ -285,7 +285,7 @@ Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil
                 <a href="https://twitter.com/jacquesbh" class="twitter-follow-button" data-show-count="false">Follow @jacquesbh</a>
             </div>
             
-            <a href="http://monsieurbiz.com">Monsieur Biz, une agence spécialisée Magento</a>
+            <a href="http://monsieurbiz.com" title="Découvrez Monsieur Biz, une agence spécialisée sur Magento, solution e-commerce">Agence Magento</a>
             | 
 
     
@@ -403,7 +403,7 @@ Et mon <a href="https://github.com/jacquesbh/Installer/">Installer</a>, un outil
             | <a href="/atom.xml">RSS</a>
             | <a href="#" id="toplink">Haut de page</a>
             <br />
-            &copy; Jacques Bodin-Hullin 2012
+            <span class="copy">&copy; Jacques Bodin-Hullin - 2013</span>
         </div>
     </div>
 
