--- a/connectez-vous-sur-un-compte-client-sur-magento.html
+++ b/connectez-vous-sur-un-compte-client-sur-magento.html
@@ -429,7 +429,7 @@ On ne va pas se prendre la tête très longtemps sur l'évènement à attraper. 
                 <a href="https://twitter.com/jacquesbh" class="twitter-follow-button" data-show-count="false">Follow @jacquesbh</a>
             </div>
             
-            <a href="http://monsieurbiz.com">Monsieur Biz, une agence spécialisée Magento</a>
+            <a href="http://monsieurbiz.com" title="Découvrez Monsieur Biz, une agence spécialisée sur Magento, solution e-commerce">Agence Magento</a>
             | 
 
     
@@ -547,7 +547,7 @@ On ne va pas se prendre la tête très longtemps sur l'évènement à attraper. 
             | <a href="/atom.xml">RSS</a>
             | <a href="#" id="toplink">Haut de page</a>
             <br />
-            &copy; Jacques Bodin-Hullin 2012
+            <span class="copy">&copy; Jacques Bodin-Hullin - 2013</span>
         </div>
     </div>
 
