--- a/un-push-pour-vos-produits-sur-magento.html
+++ b/un-push-pour-vos-produits-sur-magento.html
@@ -473,7 +473,7 @@
                 <a href="https://twitter.com/jacquesbh" class="twitter-follow-button" data-show-count="false">Follow @jacquesbh</a>
             </div>
             
-            <a href="http://monsieurbiz.com">Monsieur Biz, une agence spécialisée Magento</a>
+            <a href="http://monsieurbiz.com" title="Découvrez Monsieur Biz, une agence spécialisée sur Magento, solution e-commerce">Agence Magento</a>
             | 
 
     
@@ -591,7 +591,7 @@
             | <a href="/atom.xml">RSS</a>
             | <a href="#" id="toplink">Haut de page</a>
             <br />
-            &copy; Jacques Bodin-Hullin 2012
+            <span class="copy">&copy; Jacques Bodin-Hullin - 2013</span>
         </div>
     </div>
 
