Revert "just testing, remember to revert"

--- a/references/cms-sofitel.html
+++ b/references/cms-sofitel.html
@@ -221,7 +221,7 @@ var techno = function (nb)
 
 <h1>CMS Sofitel</h1>
 
-<p>Développement d'un système « CMS » permettant aux hôteliers Sofitel de créer une ou plusieurs pages complètement dynamiques, en français et/ou anglais, avec une intégration rapide sur la page Facebook officielle de chaque hôtel.</p>
+<p>Développement d'un système « CMS » permettant aux hôteliers Sofitel de créer une ou plusieurs [pages complètement dynamiques][mbiz], en français et/ou anglais, avec une intégration rapide sur la page Facebook officielle de chaque hôtel.</p>
 
 <p>Le système est complexe puisqu'il permet la création de 6 pages pour chaque hôtel avec une gestion des utilisateurs. Chaque page est éditable de façon complètement transparente pour avoir un aperçu direct du rendu final (AJAX uniquement) et est ensuite intégrable via un processus de validation sur la page Facebook de l'hôtel.</p>
 
@@ -229,7 +229,7 @@ var techno = function (nb)
 
 <p>Le système était basé sur le Zend Framework 1.10.6.</p>
 
-<p>J'ai développé cet outil sous la direction de The Roxane Company, via mon employeur de l'époque (ATAFOTO.studio).</p>
+<p>J'ai développé cet outil sous <a href="/a-propos.html">la direction de The Roxane Company, via mon employeur de l'époque (ATAFOTO.studio)</a>.</p>
 
 </div>
 
