--- a/references/gerantdesarl.html
+++ b/references/gerantdesarl.html
@@ -221,15 +221,15 @@ var techno = function (nb)
 
 <h1>Gérant de SARL</h1>
 
-<blockquote><p>La Sarl DPE, éditrice du site gerantdesarl.com, est une société de presse et d’édition qui existe depuis 22 ans et qui est spécialisée, depuis sa création, dans l’information et la documentation des Gérants de Sarl et d’Eurl… exclusivement.</p></blockquote>
+<blockquote><p>La Sarl DPE, éditrice du site gerantdesarl.com, est une société de presse et d’édition qui existe depuis 22 ans et qui est spécialisée, depuis sa création, dans l’information et la documentation des Gérants de Sarl et d’Eurl... exclusivement.</p></blockquote>
 
 <h2>La mission</h2>
 
-<p>Réaliser une administration déconnectée du Back Office de l'application principale (site e-commerce) permettant la gestion :</p>
+<p>Réaliser une administration déconnectée du Back Office de l'application principale (<a href="http://monsieurbiz.com/">site e-commerce</a>) permettant la gestion :</p>
 
 <ul>
 <li>Des clients</li>
-<li>Des produits (simples, packagés, virtuels, packagés virtuels...)</li>
+<li>Des <a href="http://monsieurbiz.com/">produits (simples, packagés, virtuels, packagés virtuels...)</a></li>
 <li>Des commandes</li>
 <li>De la facturation : génération et téléchargement des factures par les clients</li>
 <li>...</li>
