--- a/references/joliebox.html
+++ b/references/joliebox.html
@@ -223,16 +223,16 @@ var techno = function (nb)
 
 <h1>JolieBox</h1>
 
-<p>Je suis arrivé chez JolieBox en tant que Lead Développeur en décembre 2011.
-Ma mission a été de migrer le site de <em>JolieBox UK</em> de <em>Magento 1.5</em> vers la version 1.6 avec toutes les améliorations du site Français.
+<p>Je suis arrivé chez JolieBox en tant que Lead Développeur en décembre 2011.<br/>
+Ma mission a été de migrer le site de <em>JolieBox UK</em> de <em>Magento 1.5</em> vers la version 1.6 avec toutes les améliorations du site Français.<br/>
 Soit la gestion des produits "JolieBox" et du système d'abonnements (développement complet) avec <em>PayPal Website Payments Pro</em>.</p>
 
 <p>Quelques mois plus tard l'Espagne est arrivée. Le système était un développement complètement maison. Il a donc fallu faire une migration de toutes les données et créer des améliorations sur tout le <em>checkout</em> pour pouvoir gérer le mode de paiement espagnol (<em>Ogone</em>).</p>
 
-<p>Un peu plus tard, après la formation de plusieurs développeurs sur Magento et l'arrivée de <em>JolieBox</em> dans la famille <em>Birchbox</em>, je me suis occupéde la migration du Magento (en version 1.6) vers la dernière version Enterprise (1.12).
-Un vrai challenge car nous étions sur un Magento vraiment personnalisé. La migration a pris une semaine.</p>
+<p>Un peu plus tard, après la <a href="http://monsieurbiz.com/">formation de plusieurs développeurs sur Magento</a> et l'arrivée de <em>JolieBox</em> dans la famille <em>Birchbox</em>, je me suis occupéde la <a href="http://monsieurbiz.com/">migration du Magento</a> (en version 1.6) vers la dernière version Enterprise (1.12).<br/>
+Un vrai challenge car nous étions sur <a href="http://monsieurbiz.com/">un Magento vraiment personnalisé</a>. La migration a pris une semaine.</p>
 
-<p>Les développements sur les version espagnole et anglaise de JolieBox m'ont appris énormément de choses. J'ai été obligé de mettre vraiment la main dans les systèmes de paiement avec la problématique du récurrent (abonnements).
+<p>Les développements sur les version espagnole et anglaise de JolieBox m'ont appris énormément de choses. J'ai été obligé de mettre vraiment la main dans les systèmes de paiement avec la problématique du récurrent (abonnements).<br/>
 De plus il est vite apparu que les développements devaient être rapidement exécuté mais toujours dans un soucis de qualité.</p>
 
 <p>Je suis parti de JolieBox le 25 septembre 2012. J'y suis donc resté environ 10 mois.</p>
