--- a/references/kinderchocolat.html
+++ b/references/kinderchocolat.html
@@ -225,7 +225,7 @@ var techno = function (nb)
 
 <p>J'ai commencé chez <em>ATAFOTO.studio</em> en 2010 par un projet de grande envergure : Réorganiser totalement le site des Petits Créatifs.</p>
 
-<p>A la fin de mes études je suis arrivé pour réorganiser/factoriser ce site internet basé sur le Zend Framework.<br/>
+<p>A la fin de mes études je suis arrivé pour réorganiser/factoriser ce <a href="http://monsieurbiz.com/">site internet basé sur le Zend Framework</a>.<br/>
 Un énorme projet à refaire en quelque sorte. Il m'a fallu restructurer toute l'architecture en modules afin de respecter un peu plus les conventions du Zend Framework.<br/>
 Il faut noter que ce projet était une reprise d'une autre agence et que la deadline de mise en ligne était largement dépassée. Le challenge était là.</p>
 
@@ -236,7 +236,7 @@ Il faut noter que ce projet était une reprise d'une autre agence et que la dead
 <p>Ce site a été réalisé pour permettre aux enfants de s'occuper avec des coloriages, des points à relier (puis à colorier), des « papertoys » et des <em>CDTO</em> (<em>Comment dessine-t-on ?</em>).<br/>
 On y trouve également un concours mensuel de dessin sur un thème sélectionné et de multiples coloriages à thèmes (Noël, Vacances...).</p>
 
-<p>Il s'agissait d'un projet en sous-marin car j'ai été seul pendant toute la période avant la mise en ligne, et après pour la maintenance.</p>
+<p>Il s'agissait d'un projet en sous-marin car j'ai été seul pendant toute la période avant la mise en ligne, et après pour la <a href="http://monsieurbiz.com/">maintenance du site</a>.</p>
 
 </div>
 
